bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:2: error: Missing closing brace `}' assumed here
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
^MonkeyTrouble:2: error: expected class or object definition
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
^